objects/project_cloud__Configuration_Options__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>The options here, enable expermental or beta options in the application. Please modify them with caution.</description>
    <fields>
        <fullName>project_cloud__Allow_Duplicate_Time_Entries__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To save space and eliminate confusion on the timecard duplicate time entries are not permitted. If you would like to allow your users to enter more than one entry per day against the same unit of work enbale this option.</description>
        <inlineHelpText>To allow users to enter more than one entry per day against the same unit of work enable this option.</inlineHelpText>
        <label>Allow Duplicate Time Entries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Disable_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable chatter notifications for project status changes</description>
        <label>Disable Chatter Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Enable_Batch_Project_Cloning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables project cloning from the wizard to execute as a batch job. Enable this setting if you are receiving Apex CPU Limit exceptions when cloning complex projects and templates.</description>
        <inlineHelpText>Enables project cloning from the wizard to execute as a batch job. Enable this setting if you are receiving Apex CPU Limit exceptions when cloning complex projects and templates.</inlineHelpText>
        <label>Enable Batch Project Cloning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hide_Sub_Tasks_External__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hides all Sub Tasks in the External Project View</description>
        <inlineHelpText>Hides all Sub Tasks in the External Project View</inlineHelpText>
        <label>Hide Sub Tasks in External View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hide_Tasks_External__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow the explicit visibility of project tasks in the external project view, via &apos;Show in External View&apos; on the Project Task</description>
        <inlineHelpText>Allow the explicit visibility of project tasks in the external project view, via &apos;Show in External View&apos; on the Project Task</inlineHelpText>
        <label>Hide Project Tasks in External View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hide_Tickets_External__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow the explicit visibility of project tickets in the external project view, via &apos;Show in External View&apos; on the Ticket</description>
        <inlineHelpText>Allow the explicit visibility of tickets in the external project view, via &apos;Show in External View&apos; on the Ticket</inlineHelpText>
        <label>Hide Tickets in External View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Initial_Version__c</fullName>
        <description>This is the first version of the managed package that was installed into the org</description>
        <label>Initial Version</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsMoveMultiple__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To enable updating of the length or dates of more than one task, this option can be checked. For more complex projects this might introduce dependency sync errors.</description>
        <label>Move Multiple</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsRollup_Worked_Hours__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if the Work Time Entries should be rolled up onto the Worked_Hours__c field on the Project, Phase, Task and Ticket objects. When disabled a custom trigger can be used to perform more advanced calculations on worked hours</description>
        <label>Rollup Worked Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Migrated_Version__c</fullName>
        <description>This is the last version that the migration script was run</description>
        <label>Migrated Version</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Namespace__c</fullName>
        <label>Namespace</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>project_cloud__Only_Allocatable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Restrict the results of the user queries to users with the Allocatable checkbox</description>
        <inlineHelpText>When resourcing and assigning capabilities, should only the users with the &apos;Allocatable&apos; checkbox be returned. This is useful for large organisations who want to keep the</inlineHelpText>
        <label>Only Allocatable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Resourcing_Disable_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable Salesforce events being included in any resourcing calculations</description>
        <inlineHelpText>Disable Salesforce events being included in any resourcing calculations</inlineHelpText>
        <label>Resourcing Disable Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Resourcing_Disable_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resourcing Disable Load Calculations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Sort_Projects_Alphabetically__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the Project Phases and Tasks lists will be sorted alphabetically not by start date. This affects the Project Task View, the Project Tree, and the Gantt Chart</inlineHelpText>
        <label>Sort Projects Alphabetically</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__WalkMe_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determine whether or not the WalkMe interactive walkthroughs are available for use.</description>
        <label>WalkMe Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Configuration Options</label>
</CustomObject>